# sred

./: CHANGELOG.md  Cargo.toml  README.md
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  INTEGRATION.md  ISSUE_19_INCREMENTAL_STYLING.md  MF_PHASE2.md  PERF.md  ROADMAP.md
sred-core/: Cargo.toml
sred-core/src/: api.rs  editor.rs  format.rs  layout.rs  lib.rs  markdown.rs  model.rs  typst_fmt.rs  view.rs
sred-core/tests/: api_facade.rs  commonmark.rs  cosmic_fidelity_spike.rs  editing_v04.rs  fidelity.rs  fragment_overlay.rs  fragments.rs  geometry.rs  ime_a11y.rs  lists.rs  multicursor.rs  perf_probe.rs  power_v06.rs  typst_blocks.rs
sred-demo/: Cargo.toml
sred-demo/src/: main.rs
sred-egui/: Cargo.toml
sred-egui/src/: lib.rs
sred-slint/: Cargo.toml  build.rs
sred-slint/src/: lib.rs
sred-slint/ui/: sred.slint
sred-typst/: Cargo.toml
sred-typst/src/: lib.rs
