[package]
name = "sred-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Format-agnostic rich-text editor core (Markdown + Typst) — no UI dependency"

[features]
# Syntect-based syntax highlighting for fenced code blocks (and code/typst
# notes). Off by default — syntect is a heavy dep; consumers (e.g. the demo,
# noet) opt in. Uses fancy-regex (pure Rust, no C oniguruma).
syntax-highlight = ["dep:syntect"]

[dependencies]
cosmic-text.workspace = true
pulldown-cmark.workspace = true
typst-syntax.workspace = true
ropey.workspace = true
bitflags.workspace = true
unicode-segmentation.workspace = true
syntect = { version = "5", default-features = false, features = ["default-fancy"], optional = true }
