[package]
name = "sred-typst"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Typst math/figure fragment renderer for the sred editor (optional)"

[dependencies]
sred-core = { path = "../sred-core" }
typst = "0.14"
typst-render = "0.14"
# Embedded fonts only — no system-font scan, no network/package features.
typst-kit = { version = "0.14", default-features = false, features = ["embed-fonts"] }
tiny-skia = "0.11"
